--- a/frontend/test.html
+++ b/frontend/test.html
@@ -124,27 +124,27 @@
     <h2>Wedding Planner Video Gallery</h2>
     <div class="video-row">
         <div class="video-container" data-video-id="video1">
-            <img src="/frontend/allpack/indinzi/assetindinzi/20.jpg" alt="Wedding Highlights">
+            <img src="/frontend/allpack/indinzi/video_asset/mucyo.png" alt="Wedding Highlights">
             <h5>Wedding Highlights</h5>
             <i class="fas fa-play play-icon"></i>
         </div>
         <div class="video-container" data-video-id="video2">
-            <img src="https://via.placeholder.com/300x200?text=Client+Testimonials" alt="Client Testimonials">
+            <img src="/frontend/allpack/indinzi/video_asset/oben1.png" alt="Client Testimonials">
             <h5>Client Testimonials</h5>
             <i class="fas fa-play play-icon"></i>
         </div>
         <div class="video-container" data-video-id="video3">
-            <img src="https://via.placeholder.com/300x200?text=Venue+Tour" alt="Venue Tour">
+            <img src="/frontend/allpack/indinzi/video_asset/olga.png" alt="Venue Tour">
             <h5>Venue Tour</h5>
             <i class="fas fa-play play-icon"></i>
         </div>
         <div class="video-container" data-video-id="video4">
-            <img src="https://via.placeholder.com/300x200?text=Planning+Tips" alt="Planning Tips">
+            <img src="/frontend/allpack/indinzi/video_asset/intore1.png" alt="Planning Tips">
             <h5>Planning Tips</h5>
             <i class="fas fa-play play-icon"></i>
         </div>
         <div class="video-container" data-video-id="video5">
-            <img src="https://via.placeholder.com/300x200?text=Real+Weddings" alt="Real Weddings">
+            <img src="/frontend/allpack/indinzi/video_asset/agacye.png" alt="Real Weddings">
             <h5>Real Weddings</h5>
             <i class="fas fa-play play-icon"></i>
         </div>
@@ -187,10 +187,11 @@
 <script>
     const videoSources = {
         video1: '/frontend/allpack/indinzi/video_asset/mucyo.mp4',
-        video2: '/frontend/allpack/indinzi/video_asset/ikanombe.mp4',
+        video2: '/frontend/allpack/indinzi/video_asset/umuzungu.mp4',
         video3: '/frontend/allpack/indinzi/video_asset/queen.mp4',
         video4: '/frontend/allpack/indinzi/video_asset/nyaruguru.mp4',
-        video5: '/frontend/allpack/indinzi/video_asset/serenabeby.mp4',
+        video5: '/frontend/allpack/indinzi/video_asset/agacyecuru.mp4',
+
     };
 
     // Function to open the modal and play the video
