--- a/frontend/allpack/indinzi/troup/indinziv.html
+++ b/frontend/allpack/indinzi/troup/indinziv.html
@@ -76,7 +76,7 @@
 
     <!-- Video Container -->
     <div class="video-container">
-        <video src="/frontend/allpack/indinzi/video_asset/agacyecuru.mp4" autoplay loop muted></video>
+        <video src="/frontend/allpack/indinzi/video_asset/agacyecuru.mp4" autoplay loop muted disablePictureInPicture></video>
     </div>
 
     <footer class="bg-dark text-light py-4 footer-animated">
