--- a/frontend/allpack/indinzi/troup/indinziv.html
+++ b/frontend/allpack/indinzi/troup/indinziv.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous"
     />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    
+
     <style>
         /* Style for the video wrapper */
         .video-container {
@@ -30,10 +30,41 @@
             object-fit: cover; /* This ensures the video covers the container */
             object-position: center; /* Keeps the video centered */
         }
+
+        /* Centering the heading text */
+        .video-heading-container {
+            position: absolute; /* Allows us to position it relative to the video */
+            top: 70%; /* Center vertically */
+            left: 50%; /* Center horizontally */
+            transform: translate(-50%, -50%); /* Fine-tunes the centering */
+            text-align: center;
+            z-index: 10; /* Ensure the text appears above the video */
+        }
+
+        /* Heading style and animation */
+        .video-heading-container p {
+                font-size: 2rem; /* Adjust font size as necessary (larger text) */
+                color: rgb(252, 252, 252); /* White color for visibility over the video */
+                opacity: 0; /* Start invisible */
+                animation: fadeInFromLeft 5s forwards; /* Animation for the heading */
+        }
+
+        /* Keyframes for sliding the text from the right */
+        @keyframes fadeInFromLeft {
+            0% {
+                transform: translateX(100%); /* Start from the right */
+                opacity: 0;
+            }
+            100% {
+                transform: translateX(0); /* End at the center */
+                opacity: 1;
+            }
+        }
     </style>
 </head>
 <body>
- 
+
+    <!-- Navbar Section -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand logo-margin" href="#">Logo</a>
@@ -74,64 +105,67 @@
         </div>
     </nav>
 
-    <!-- Video Container -->
+    <!-- Video Container with Heading -->
     <div class="video-container">
         <video src="/frontend/allpack/indinzi/video_asset/agacyecuru.mp4" autoplay loop muted disablePictureInPicture></video>
+        <div class="video-heading-container">
+            <p>Celebrating the Heart of Culture – Tradition Dancers, We're Here to Bring Your Event to Life!</p>
+        </div>
     </div>
 
     <footer class="bg-dark text-light py-4 footer-animated">
         <div class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <h5>About Us</h5>
-              <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <h5>About Us</h5>
+                    <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Quick Links</h5>
+                    <ul class="list-unstyled footer-content">
+                        <li><a href="home.htm" class="text-light">Home</a></li>
+                        <li><a href="#" class="text-light">About</a></li>
+                        <li><a href="#" class="text-light">Services</a></li>
+                        <li><a href="index.html" class="text-light">Packages</a></li>
+                        <li><a href="#" class="text-light">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5>Contact Us</h5>
+                    <p class="footer-content">Email: info@eventplanner.com</p>
+                    <p class="footer-content">Phone: +250785300707</p>
+                    <p class="footer-content">Address: 123 Event St, City, Country</p>
+                </div>
             </div>
-            <div class="col-md-4">
-              <h5>Quick Links</h5>
-              <ul class="list-unstyled footer-content">
-                <li><a href="home.htm" class="text-light">Home</a></li>
-                <li><a href="#" class="text-light">About</a></li>
-                <li><a href="#" class="text-light">Services</a></li>
-                <li><a href="index.html" class="text-light">Packages</a></li>
-                <li><a href="#" class="text-light">Contact</a></li>
-              </ul>
+            <div class="row">
+                <div class="col text-center mt-4">
+                    <ul class="list-inline footer-content">
+                        <li class="list-inline-item">
+                            <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-4">
-              <h5>Contact Us</h5>
-              <p class="footer-content">Email: info@eventplanner.com</p>
-              <p class="footer-content">Phone: +250785300707</p>
-              <p class="footer-content">Address: 123 Event St, City, Country</p>
+            <div class="row">
+                <div class="col text-center mt-3">
+                    <p>&copy; 2024 Event Planner. All rights reserved.</p>
+                </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col text-center mt-4">
-              <ul class="list-inline footer-content">
-                <li class="list-inline-item">
-                  <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col text-center mt-3">
-              <p>&copy; 2024 Event Planner. All rights reserved.</p>
-            </div>
-          </div>
         </div>
-      </footer>
-      
-      <!-- bootstrap js -->
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-              integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-              crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-              integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-              crossorigin="anonymous"></script>
+    </footer>
+
+    <!-- Bootstrap JS and Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
 </body>
 </html>
