--- a/test2.html
+++ b/test2.html
@@ -21,8 +21,6 @@
             font-family: 'Arial', sans-serif;
         }
 
-        
-
         /* Hero Video Section */
         .hero-video-container {
             position: relative;
@@ -34,6 +32,7 @@
             width: 100%;
             height: 550px;
             object-fit: cover;
+            /* Disable Picture-in-Picture */
         }
 
         .hero-video-container p {
@@ -183,7 +182,6 @@
 
     <!-- Video Gallery Section -->
     <div class="container">
-        
         <div class="video-row">
             <div class="video-container" data-video-id="video1">
                 <img src="/frontend/allpack/indinzi/video_asset/mucyo.png" alt="Wedding Highlights">
@@ -221,7 +219,7 @@
                     <button type="button" class="close-button" id="closeButton" data-bs-dismiss="modal" aria-label="Close">X</button>
                 </div>
                 <div class="modal-body">
-                    <video id="videoPlayer" controls>
+                    <video id="videoPlayer" controls disablePictureInPicture>
                         <source id="videoSource" src="" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -229,57 +227,54 @@
             </div>
         </div>
     </div>
-<!-- footer-->
-<footer class="bg-dark text-light py-4 footer-animated">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h5>About Us</h5>
-                <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable
-                    experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
-            </div>
-            <div class="col-md-4">
-                <h5>Quick Links</h5>
-                <ul class="list-unstyled footer-content">
-                    <li><a href="home.htm" class="text-light">Home</a></li>
-                    <li><a href="#" class="text-light">About</a></li>
-                    <li><a href="#" class="text-light">Services</a></li>
-                    <li><a href="index.html" class="text-light">Packages</a></li>
-                    <li><a href="#" class="text-light">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h5>Contact Us</h5>
-                <p class="footer-content">Email: info@eventplanner.com</p>
-                <p class="footer-content">Phone: +250785300707</p>
-                <p class="footer-content">Address: 123 Event St, City, Country</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col text-center mt-4">
-                <ul class="list-inline footer-content">
-                    <li class="list-inline-item">
-                        <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i
-                                class="fab fa-instagram"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col text-center mt-3">
-                <p>&copy; 2024 Event Planner. All rights reserved.</p>
-            </div>
-        </div>
-    </div>
-</footer>
 
-
+    <!-- footer-->
+    <footer class="bg-dark text-light py-4 footer-animated">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5>About Us</h5>
+                    <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Quick Links</h5>
+                    <ul class="list-unstyled footer-content">
+                        <li><a href="home.htm" class="text-light">Home</a></li>
+                        <li><a href="#" class="text-light">About</a></li>
+                        <li><a href="#" class="text-light">Services</a></li>
+                        <li><a href="index.html" class="text-light">Packages</a></li>
+                        <li><a href="#" class="text-light">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5>Contact Us</h5>
+                    <p class="footer-content">Email: info@eventplanner.com</p>
+                    <p class="footer-content">Phone: +250785300707</p>
+                    <p class="footer-content">Address: 123 Event St, City, Country</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center mt-4">
+                    <ul class="list-inline footer-content">
+                        <li class="list-inline-item">
+                            <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center mt-3">
+                    <p>&copy; 2024 Event Planner. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script>
         const videoSources = {
