--- a/frontend/allpack/indinzi/troup/indinziv.html
+++ b/frontend/allpack/indinzi/troup/indinziv.html
@@ -4,59 +4,90 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/frontend/css/footer.css">
     <link rel="stylesheet" href="/frontend/css/navbar.css">
+    <link rel="stylesheet" href="/frontend/css/footer.css">
     <link rel="stylesheet" href="/frontend/allpack/css/indinzi.css">
-    <title>Event</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <title>Wedding Planner Video Gallery</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- FontAwesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    
     <style>
         body {
-            background-color: #f4f4f4;
+            background-color: #f9f9f9;
             color: #333;
+            font-family: 'Arial', sans-serif;
         }
 
-        .container {
-            margin-top: 40px;
-        }
-
-        h2 {
+        /* Hero Video Section */
+        .hero-video-container {
+            position: relative;
             text-align: center;
             margin-bottom: 40px;
-            font-family: 'Arial', sans-serif;
+        }
+
+        .hero-video-container video {
+            width: 100%;
+            height: 550px;
+            object-fit: cover;
+            /* Disable Picture-in-Picture */
+        }
+
+        .hero-video-container p {
+            position: absolute;
+            top: 70%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #ff6f61;
+            font-size: 30px;
+            font-weight: bold;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        }
+
+        /* Section Heading */
+        h2 {
+            text-align: center;
+            font-size: 32px;
+            margin-bottom: 40px;
             color: #ff6f61;
         }
 
+        /* Video Gallery Styling */
         .video-row {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             gap: 20px;
-            padding-bottom: 20px;
             justify-items: center;
+            padding: 20px;
         }
 
         .video-container {
             position: relative;
             width: 100%;
             text-align: center;
-            border-radius: 8px;
+            border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            cursor: pointer;
+            transition: transform 0.3s ease;
         }
 
         .video-container img {
             width: 100%;
-            height: 300px;
+            height: 250px;
             object-fit: cover;
         }
 
         .video-container h5 {
-            font-size: 18px;
             margin-top: 10px;
             color: #333;
+            font-size: 18px;
+        }
+
+        .video-container:hover {
+            transform: scale(1.05);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
         }
 
         .play-icon {
@@ -65,8 +96,8 @@
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 50px;
-            color: rgb(3, 133, 255);
-            opacity: 0.8;
+            color: rgba(0, 140, 255, 0.8);
+            opacity: 0;
             transition: opacity 0.3s ease;
         }
 
@@ -74,6 +105,7 @@
             opacity: 1;
         }
 
+        /* Modal Styling */
         .modal-body {
             padding: 0;
             display: flex;
@@ -102,6 +134,7 @@
             transform: rotate(90deg);
         }
 
+        /* Responsive Styling */
         @media (max-width: 768px) {
             .video-container {
                 width: 90%;
@@ -113,104 +146,42 @@
                 width: 100%;
             }
         }
-
-        .video-container {
-            position: relative;
-            width: 100%;
-            height: 80vh;
-            overflow: hidden;
-        }
-
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            object-position: center;
-        }
-
-        .video-heading-container {
-            position: absolute;
-            top: 70%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            z-index: 10;
-        }
-
-        .video-heading-container p {
-            font-size: 2rem;
-            color: rgb(252, 252, 252);
-            opacity: 0;
-            border-radius: 10px;
-            background-color: rgba(0, 0, 0, 0);
-            font-family: 'Times New Roman', serif;
-            animation: fadeInFromLeft 5s forwards;
-        }
-
-        @keyframes fadeInFromLeft {
-            0% {
-                transform: translateX(100%);
-                opacity: 0;
-            }
-
-            100% {
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
     </style>
 </head>
 
 <body>
-
     <!-- Navbar Section -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand logo-margin" href="#">Logo</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">Wedding Planner</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Service</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Booking</a>
-                    </li>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="/home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/about">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#">Services</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/packages">Packages</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/suppliers">Suppliers</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#">Booking</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Video Container with Heading -->
-    <div class="video-container">
+    <!-- Hero Video Section -->
+    <div class="hero-video-container">
         <video src="/frontend/allpack/indinzi/video_asset/agacyecuru.mp4" autoplay loop muted disablePictureInPicture></video>
-        <div class="video-heading-container">
-            <p>Celebrating the Heart of Culture Tradition Dancers, We're Here to Bring Your Event to Life!</p>
-        </div>
+        <p>Celebrating the Heart of Cultural Tradition, Bringing Your Event to Life!</p>
     </div>
-
     <div class="item my-4">
-        <a href="#Images">Images</a>
-        <a href="#">Highlight</a>
+        <a href="/frontend/allpack/indinzi/troup/indinzi.html">Images</a>
+        <a href="#videos">Highlight</a>
     </div>
 
-    <div class="container">
+    <!-- Video Gallery Section -->
+    <div class="container" id="videos">
         <div class="video-row">
             <div class="video-container" data-video-id="video1">
                 <img src="/frontend/allpack/indinzi/video_asset/mucyo.png" alt="Wedding Highlights">
@@ -241,15 +212,14 @@
     </div>
 
     <!-- Modal for video playback -->
-    <div class="modal" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true"
-        data-bs-backdrop="true" data-bs-keyboard="false">
+    <div class="modal" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close-button" id="closeButton" data-bs-dismiss="modal" aria-label="Close">X</button>
                 </div>
                 <div class="modal-body">
-                    <video id="videoPlayer" controls>
+                    <video id="videoPlayer" controls disablePictureInPicture>
                         <source id="videoSource" src="" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -258,13 +228,13 @@
         </div>
     </div>
 
+    <!-- footer-->
     <footer class="bg-dark text-light py-4 footer-animated">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <h5>About Us</h5>
-                    <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable
-                        experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
+                    <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
                 </div>
                 <div class="col-md-4">
                     <h5>Quick Links</h5>
@@ -293,8 +263,7 @@
                             <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i
-                                    class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -310,10 +279,10 @@
     <script>
         const videoSources = {
             video1: '/frontend/allpack/indinzi/video_asset/mucyo.mp4',
-            video2: '/frontend/allpack/indinzi/video_asset/ikanombe.mp4',
+            video2: '/frontend/allpack/indinzi/video_asset/umuzungu.mp4',
             video3: '/frontend/allpack/indinzi/video_asset/queen.mp4',
             video4: '/frontend/allpack/indinzi/video_asset/nyaruguru.mp4',
-            video5: '/frontend/allpack/indinzi/video_asset/serenabeby.mp4',
+            video5: '/frontend/allpack/indinzi/video_asset/agacyecuru.mp4',
         };
 
         document.querySelectorAll('.video-container').forEach(container => {
@@ -321,22 +290,20 @@
                 const videoId = this.getAttribute('data-video-id');
                 const video = document.getElementById("videoPlayer");
                 const videoSource = document.getElementById("videoSource");
-                const image = this.querySelector('img');
-                const playIcon = this.querySelector('.play-icon');
-                const title = this.querySelector('h5');
-
-                image.style.display = 'none';
-                playIcon.style.display = 'none';
-                title.style.display = 'none';
-
+                const modal = new bootstrap.Modal(document.getElementById('videoModal'));
+                
                 videoSource.src = videoSources[videoId];
                 video.load();
-                video.disablePictureInPicture = true;
+                video.play();
 
-                const modal = new bootstrap.Modal(document.getElementById('videoModal'));
                 modal.show();
 
-                video.play();
+                // Add event listener for when the video ends
+                video.addEventListener('ended', function () {
+                    // Close the modal when the video ends
+                    const modalInstance = bootstrap.Modal.getInstance(document.getElementById('videoModal'));
+                    modalInstance.hide();
+                });
             });
         });
 
@@ -346,55 +313,24 @@
             video.currentTime = 0;
             const modal = bootstrap.Modal.getInstance(document.getElementById('videoModal'));
             modal.hide();
-
-            document.querySelectorAll('.video-container').forEach(container => {
-                const image = container.querySelector('img');
-                const playIcon = container.querySelector('.play-icon');
-                const title = container.querySelector('h5');
-                image.style.display = 'block';
-                playIcon.style.display = 'block';
-                title.style.display = 'block';
-            });
         });
 
-        document.getElementById("videoPlayer").addEventListener('ended', function () {
-            const video = document.getElementById("videoPlayer");
-            video.pause();
-            video.currentTime = 0;
-            const modal = bootstrap.Modal.getInstance(document.getElementById('videoModal'));
-            modal.hide();
-
-            document.querySelectorAll('.video-container').forEach(container => {
-                const image = container.querySelector('img');
-                const playIcon = container.querySelector('.play-icon');
-                const title = container.querySelector('h5');
-                image.style.display = 'block';
-                playIcon.style.display = 'block';
-                title.style.display = 'block';
-            });
-        });
-
-        const videoModal = document.getElementById("videoModal");
-        videoModal.addEventListener('hidden.bs.modal', function () {
-            const video = document.getElementById("videoPlayer");
-            video.pause();
-            video.currentTime = 0;
-
-            document.querySelectorAll('.video-container').forEach(container => {
-                const image = container.querySelector('img');
-                const playIcon = container.querySelector('.play-icon');
-                const title = container.querySelector('h5');
-                image.style.display = 'block';
-                playIcon.style.display = 'block';
-                title.style.display = 'block';
-            });
+        // Close the modal if the user clicks outside the video (on the modal background)
+        document.getElementById('videoModal').addEventListener('click', function (event) {
+            const modalContent = document.querySelector('.modal-content');
+            if (!modalContent.contains(event.target)) {
+                // The user clicked outside the modal content
+                const video = document.getElementById("videoPlayer");
+                video.pause();
+                video.currentTime = 0;
+                const modal = bootstrap.Modal.getInstance(document.getElementById('videoModal'));
+                modal.hide();
+            }
         });
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
