--- a/frontend/allpack/indinzi/troup/indinzi.html
+++ b/frontend/allpack/indinzi/troup/indinzi.html
@@ -120,7 +120,7 @@
 <div class="item my-4">
     <a href="#Images">Images</a>
     
-    <a href="/frontend/allpack/indinzi/troup/indinziv.html">Hightlight</a>
+    <a href="/frontend/allpack/indinzi/troup/indinziv.html">Short Videos</a>
     </div>
 
 
