--- a/frontend/allpack/indinzi/troup/indinziv.html
+++ b/frontend/allpack/indinzi/troup/indinziv.html
@@ -172,12 +172,12 @@
 
     <!-- Hero Video Section -->
     <div class="hero-video-container">
-        <video src="/frontend/allpack/indinzi/video_asset/agacyecuru.mp4" autoplay loop muted disablePictureInPicture></video>
+        <video src="/frontend/allpack/indinzi/video_asset/ikanombe.mp4" autoplay loop muted disablePictureInPicture></video>
         <p>Celebrating the Heart of Cultural Tradition, Bringing Your Event to Life!</p>
     </div>
     <div class="item my-4">
         <a href="/frontend/allpack/indinzi/troup/indinzi.html">Images</a>
-        <a href="#videos">Highlight</a>
+        <a href="#videos">Short Videos</a>
     </div>
 
     <!-- Video Gallery Section -->
@@ -205,6 +205,24 @@
             </div>
             <div class="video-container" data-video-id="video5">
                 <img src="/frontend/allpack/indinzi/video_asset/agacye.png" alt="Real Weddings">
+                <h5>Real Weddings</h5>
+                <i class="fas fa-play play-icon"></i>
+            </div>
+            <!---1-->
+            <div class="video-container" data-video-id="video6">
+                <img src="/frontend/allpack/indinzi/video_asset/umushagiriro.png" alt="Real Weddings">
+                <h5>Real Weddings</h5>
+                <i class="fas fa-play play-icon"></i>
+            </div>
+            <!--2-->
+            <div class="video-container" data-video-id="video7">
+                <img src="/frontend/allpack/indinzi/video_asset/amakuyugi.png" alt="Real Weddings">
+                <h5>Real Weddings</h5>
+                <i class="fas fa-play play-icon"></i>
+            </div>
+            <!--3-->
+            <div class="video-container" data-video-id="video8">
+                <img src="/frontend/allpack/indinzi/video_asset/angel.png" alt="Real Weddings">
                 <h5>Real Weddings</h5>
                 <i class="fas fa-play play-icon"></i>
             </div>
@@ -283,6 +301,10 @@
             video3: '/frontend/allpack/indinzi/video_asset/queen.mp4',
             video4: '/frontend/allpack/indinzi/video_asset/nyaruguru.mp4',
             video5: '/frontend/allpack/indinzi/video_asset/agacyecuru.mp4',
+            video6: '/frontend/allpack/indinzi/video_asset/umushagiriro.mp4',
+            video7: '/frontend/allpack/indinzi/video_asset/burnvan.mp4',
+            video8: '/frontend/allpack/indinzi/video_asset/angel.mp4',
+            
         };
 
         document.querySelectorAll('.video-container').forEach(container => {
